...
            <item
                android:id="@+id/sortByName"
                android:title="Sort By Name" />

            <item
                android:id="@+id/sortByAmount"
                android:title="Sort By Amount" />

            <item
                android:id="@+id/sortByDate"
                android:title="Sort By Date" />
        </menu>

    </item>

</menu>
